--- a/create.html
+++ b/create.html
@@ -2,92 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Create — US States Dashboard</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/styles.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="assets/styles.css"/>
 </head>
 <body>
-  <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
-    <div class="container container-narrow">
-      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <div class="ms-auto">
-        <a class="me-3" href="read.html">Data Table</a>
-        <a class="me-3" href="create.html">Create</a>
-        <a class="me-3" href="update.html">Update</a>
-        <a class="me-3" href="delete.html">Delete</a>
-        <a class="me-3" href="data.html">Charts</a>
-        <a class="me-3" href="about.html">About</a>
-      </div>
-    </div>
-  </nav>
-
-  <main class="container container-narrow py-4">
-    <div class="card p-4">
-      <div class="d-flex justify-content-between align-items-center mb-3">
-        <h5 class="mb-0">Add a New State</h5>
-        <a class="btn btn-outline-light btn-sm" href="read.html">Back to Table</a>
-      </div>
-
-      <form id="create-form" class="row g-3">
-        <div class="col-md-3">
-          <label class="form-label">ID (USPS)</label>
-          <input name="id" class="form-control" maxlength="2" placeholder="CA" required>
+  <div class="container">
+    <div class="card">
+      <h3 style="margin-top:0">Add a New State</h3>
+      <form class="form-grid" autocomplete="off">
+        <div>
+          <label>ID (USPS)</label>
+          <input class="input" name="id" placeholder="e.g., CA" required maxlength="2"/>
         </div>
-        <div class="col-md-5">
-          <label class="form-label">Name</label>
-          <input name="name" class="form-control" placeholder="California" required>
+        <div>
+          <label>Name</label>
+          <input class="input" name="name" required/>
         </div>
-        <div class="col-md-4">
-          <label class="form-label">Region</label>
-          <select name="region" class="form-select" required>
+        <div>
+          <label>Region</label>
+          <select class="input" name="region" required>
             <option value="">Select Region</option>
             <option>West</option><option>South</option><option>Midwest</option><option>Northeast</option>
           </select>
         </div>
-
-        <div class="col-md-6">
-          <label class="form-label">Capital</label>
-          <input name="capital" class="form-control" placeholder="Sacramento" required>
+        <div>
+          <label>Capital</label>
+          <input class="input" name="capital" required/>
         </div>
-        <div class="col-md-6">
-          <label class="form-label">Population (people)</label>
-          <input name="population" type="number" min="0" class="form-control" placeholder="39500000" required>
+        <div>
+          <label>Population</label>
+          <input class="input" name="population" type="number" min="0" step="1" required/>
         </div>
-        <div class="col-md-6">
-          <label class="form-label">GDP (USD)</label>
-          <input name="gdp" type="number" min="0" class="form-control" placeholder="3100000000000" required>
+        <div>
+          <label>GDP (USD)</label>
+          <input class="input" name="gdp" type="number" min="0" step="1" required/>
         </div>
-        <div class="col-md-3">
-          <label class="form-label">Area (km²)</label>
-          <input name="area" type="number" min="0" class="form-control" placeholder="423967" required>
+        <div>
+          <label>Area (km²)</label>
+          <input class="input" name="area" type="number" min="0" step="1" required/>
         </div>
-        <div class="col-md-3">
-          <label class="form-label"># Cities</label>
-          <input name="cities" type="number" min="0" class="form-control" placeholder="482" required>
+        <div>
+          <label># Cities</label>
+          <input class="input" name="cities" type="number" min="0" step="1" required/>
         </div>
-
-        <div class="col-12 d-flex gap-2">
-          <button class="btn btn-primary">Create</button>
-          <a class="btn btn-outline-light" href="read.html">Cancel</a>
+        <div class="full actions mt-2">
+          <button class="btn" type="submit">Create</button>
+          <a class="btn ghost" href="read.html">Cancel</a>
         </div>
       </form>
     </div>
-  </main>
+  </div>
 
   <script type="module">
-    import { bindCreate } from "./assets/controller.js";
-    bindCreate();
+    import { mountChrome, initCreate } from './assets/controller.js';
+    mountChrome('create'); initCreate();
   </script>
-
-<footer class="container container-narrow py-4">
-  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
-    <span>© 2025 US States Dashboard</span>
-    <span class="text-muted-2">
-      Built with <span aria-label="love">❤️</span> by Faisal, Hongxu & Jonathan
-    </span>
-  </div>
-</footer>
 
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
