--- a/data.html
+++ b/data.html
@@ -2,67 +2,33 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Charts — US States Dashboard</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/styles.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="assets/styles.css"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
-    <div class="container container-narrow">
-      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <div class="ms-auto">
-        <a class="me-3" href="read.html">Data Table</a>
-        <a class="me-3" href="create.html">Create</a>
-        <a class="me-3" href="update.html">Update</a>
-        <a class="me-3" href="delete.html">Delete</a>
-        <a class="me-3" href="data.html">Charts</a>
-        <a class="me-3" href="about.html">About</a>
-      </div>
-    </div>
-  </nav>
-
-  <main class="container container-narrow py-4">
-    <div class="row g-4">
-      <div class="col-lg-4"><div class="card p-3"><h6>Population Share (Top 6)</h6><canvas id="popDonut" height="240"></canvas></div></div>
-      <div class="col-lg-4"><div class="card p-3"><h6>GDP by State (Top 8)</h6><canvas id="gdpBar" height="240"></canvas></div></div>
-      <div class="col-lg-4"><div class="card p-3"><h6>Land Area (Top 10)</h6><canvas id="areaLine" height="240"></canvas></div></div>
+  <div class="container">
+    <div class="grid grid-3">
+      <div class="chart-box"><canvas id="c1" aria-label="Population share"></canvas></div>
+      <div class="chart-box"><canvas id="c2" aria-label="GDP"></canvas></div>
+      <div class="chart-box"><canvas id="c3" aria-label="Area"></canvas></div>
     </div>
 
-    <div class="card p-4 mt-4">
-      <h5>External Insights</h5>
-      <div class="row g-3">
-        <div class="col-md-6"><div class="p-3 rounded" style="background:#0f1b24;border:1px solid #223544">
-          <div class="text-muted-2">USA GDP (current US$)</div>
-          <div id="ext-gdp" class="fs-4 fw-bold mt-1">—</div>
-          <div class="text-muted-2 small">Source: <span class="ext-source">World Bank Open Data</span></div>
-        </div></div>
-        <div class="col-md-6"><div class="p-3 rounded" style="background:#0f1b24;border:1px solid #223544">
-          <div class="text-muted-2">USA Population</div>
-          <div id="ext-pop" class="fs-4 fw-bold mt-1">—</div>
-          <div class="text-muted-2 small">Source: <span class="ext-source">World Bank Open Data</span></div>
-        </div></div>
+    <div class="card mt-3">
+      <div style="display:flex;justify-content:space-between;align-items:center">
+        <h3 style="margin:0">External Insights</h3>
+        <a class="btn ghost" href="index.html#insights">See on Home</a>
       </div>
+      <p class="subtle">Charts above reflect your current local dataset; insights are fetched from the World Bank on the Home page.</p>
     </div>
-  </main>
+  </div>
 
   <script type="module">
-    import { renderExternal } from "./assets/controller.js";
-    import { renderCharts } from "./assets/charts.js";
-    renderCharts();
-    renderExternal();
+    import { mountChrome } from './assets/controller.js';
+    import { initCharts } from './assets/charts.js';
+    mountChrome('charts'); initCharts();
   </script>
-
-<footer class="container container-narrow py-4">
-  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
-    <span>© 2025 US States Dashboard</span>
-    <span class="text-muted-2">
-      Built with <span aria-label="love">❤️</span> by Faisal, Hongxu & Jonathan
-    </span>
-  </div>
-</footer>
-
 
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
