--- a/read.html
+++ b/read.html
@@ -2,64 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>US States Dashboard — Data Table</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/styles.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="assets/styles.css"/>
 </head>
 <body>
-  <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
-    <div class="container container-narrow">
-      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <div class="ms-auto">
-        <a class="me-3" href="read.html">Data Table</a>
-        <a class="me-3" href="create.html">Create</a>
-        <a class="me-3" href="update.html">Update</a>
-        <a class="me-3" href="delete.html">Delete</a>
-        <a class="me-3" href="data.html">Charts</a>
-        <a class="me-3" href="about.html">About</a>
-      </div>
+  <div class="container">
+    <div class="card">
+      <h3 style="margin-top:0">States</h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>ID</th><th>Name</th><th>Capital</th><th>Population</th>
+            <th>GDP (USD)</th><th>Area (km²)</th><th>Cities</th><th>Actions</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
     </div>
-  </nav>
-
-  <main class="container container-narrow py-4">
-    <div class="card p-3">
-      <div class="d-flex justify-content-between align-items-center mb-2">
-        <h5 class="mb-0">States</h5>
-        <a class="btn btn-teal btn-sm btn-primary" href="create.html">+ Add State</a>
-      </div>
-      <div class="table-responsive">
-        <table class="table table-dark align-middle">
-          <thead>
-            <tr>
-              <th>ID</th><th>Name</th><th>Capital</th>
-              <th class="text-end">Population</th>
-              <th class="text-end">GDP (USD)</th>
-              <th class="text-end">Area (km²)</th>
-              <th class="text-end">Cities</th>
-              <th class="text-end">Actions</th>
-            </tr>
-          </thead>
-          <tbody id="states-body"></tbody>
-        </table>
-      </div>
-      <div class="text-end text-muted-2">Read view (CRUD R)</div>
-    </div>
-  </main>
-
-<footer class="container container-narrow py-4">
-  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
-    <span>© 2025 US States Dashboard</span>
-    <span class="text-muted-2">
-      Built with <span aria-label="love">❤️</span> by Faisal, Hongxu & Jonathan
-    </span>
   </div>
-</footer>
-
 
   <script type="module">
-    import { renderTable } from "./assets/controller.js";
-    renderTable();
+    import { mountChrome, initRead } from './assets/controller.js';
+    mountChrome('read'); initRead();
   </script>
 
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
