--- a/update.html
+++ b/update.html
@@ -2,90 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Update — US States Dashboard</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/styles.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="assets/styles.css"/>
 </head>
 <body>
-  <nav class="navbar navbar-dark navbar-expand-lg sticky-top">
-    <div class="container container-narrow">
-      <a class="navbar-brand fw-bold" href="index.html">US States Dashboard</a>
-      <div class="ms-auto">
-        <a class="me-3" href="read.html">Data Table</a>
-        <a class="me-3" href="create.html">Create</a>
-        <a class="me-3" href="update.html">Update</a>
-        <a class="me-3" href="delete.html">Delete</a>
-        <a class="me-3" href="data.html">Charts</a>
-        <a class="me-3" href="about.html">About</a>
+  <div class="container">
+    <div class="card">
+      <h3 style="margin:0 0 12px">Choose a state to edit</h3>
+      <div class="actions">
+        <select id="sel" class="input" style="max-width:360px"></select>
+        <button id="load" class="btn">Load</button>
       </div>
-    </div>
-  </nav>
-
-  <main class="container container-narrow py-4">
-    <div class="card p-4">
-      <h5>Choose a state to edit</h5>
-      <div class="d-flex gap-2 mb-3">
-        <select id="state-select" class="form-select w-auto"></select>
-        <button id="btn-load" class="btn btn-outline-light">Load</button>
-      </div>
-
-      <form id="update-form" class="row g-3">
-        <div class="col-md-3">
-          <label class="form-label">State ID (2-letter Code)</label>
-          <input name="id" class="form-control" maxlength="2" required>
+      <form class="form-grid mt-3">
+        <div>
+          <label>State ID (2-letter Code)</label>
+          <input id="f-id" class="input" required maxlength="2"/>
         </div>
-        <div class="col-md-5">
-          <label class="form-label">State Name</label>
-          <input name="name" class="form-control" required>
+        <div>
+          <label>State Name</label>
+          <input id="f-name" class="input" required/>
         </div>
-        <div class="col-md-4">
-          <label class="form-label">Region</label>
-          <select name="region" class="form-select" required>
+        <div>
+          <label>Region</label>
+          <select id="f-region" class="input" required>
             <option>West</option><option>South</option><option>Midwest</option><option>Northeast</option>
           </select>
         </div>
-        <div class="col-md-6">
-          <label class="form-label">Capital</label>
-          <input name="capital" class="form-control" required>
+        <div>
+          <label>Capital</label>
+          <input id="f-capital" class="input" required/>
         </div>
-        <div class="col-md-6">
-          <label class="form-label">Number of Cities</label>
-          <input name="cities" type="number" min="0" class="form-control" required>
+        <div>
+          <label>Number of Cities</label>
+          <input id="f-cities" class="input" type="number" min="0" step="1" required/>
         </div>
-        <div class="col-md-4">
-          <label class="form-label">Population</label>
-          <input name="population" type="number" min="0" class="form-control" required>
+        <div>
+          <label>Population</label>
+          <input id="f-pop" class="input" type="number" min="0" step="1" required/>
         </div>
-        <div class="col-md-4">
-          <label class="form-label">GDP (USD)</label>
-          <input name="gdp" type="number" min="0" class="form-control" required>
+        <div>
+          <label>GDP (USD)</label>
+          <input id="f-gdp" class="input" type="number" min="0" step="1" required/>
         </div>
-        <div class="col-md-4">
-          <label class="form-label">Land Area (km²)</label>
-          <input name="area" type="number" min="0" class="form-control" required>
+        <div>
+          <label>Land Area (km²)</label>
+          <input id="f-area" class="input" type="number" min="0" step="1" required/>
         </div>
-        <div class="col-12 d-flex gap-2">
-          <button class="btn btn-primary">Save Changes</button>
-          <a class="btn btn-outline-light" href="read.html">Cancel</a>
+        <div class="full actions mt-2">
+          <button class="btn" type="submit">Save Changes</button>
+          <a class="btn ghost" href="read.html">Cancel</a>
         </div>
       </form>
     </div>
-  </main>
+  </div>
 
   <script type="module">
-    import { initUpdate } from "./assets/controller.js";
-    initUpdate();
+    import { mountChrome, initUpdate } from './assets/controller.js';
+    mountChrome('update'); initUpdate();
   </script>
-
-<footer class="container container-narrow py-4">
-  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
-    <span>© 2025 US States Dashboard</span>
-    <span class="text-muted-2">
-      Built with <span aria-label="love">❤️</span> by Faisal, Hongxu & Jonathan
-    </span>
-  </div>
-</footer>
 
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
