changed lot of stuff

--- a/about.html
+++ b/about.html
@@ -12,18 +12,14 @@
       <h3>About Us</h3>
       <div class="team-grid mt-2">
         <div class="member">
-          <img src="assets/faisal.jpg" alt="Mohamed Faisal Sindhi"/>
+          <img src="assets/faisal.JPG" alt="Mohamed Faisal Sindhi"/>
           <div>
             <h4>Mohamed Faisal Sindhi</h4>
             <small>Frontend, deployment, chatbot</small>
-            <div class="actions mt-2">
-              <a class="btn" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub Repository</a>
-              <a class="btn ghost" href="README.md" target="_blank" rel="noopener">README (Technical Details)</a>
-            </div>
           </div>
         </div>
         <div class="member">
-          <img src="assets/hongxu.jpg" alt="Hongxu Yang"/>
+          <img src="assets/hongxu.JPG" alt="Hongxu Yang"/>
           <div>
             <h4>Hongxu Yang</h4>
             <small>UI/UX, ERD & documentation</small>
@@ -38,6 +34,10 @@
         </div>
       </div>
     </div>
+    <div class="actions mt-2">
+              <a class="btn" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub Repository</a>
+              <a class="btn ghost" href="README.md" target="_blank" rel="noopener">README (Technical Details)</a>
+            </div>
 
     <div class="erd-wrap mt-3">
       <h3 style="margin-top:0">Data Model (ERD)</h3>
