--- a/about.html
+++ b/about.html
@@ -2,84 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>About — US States Dashboard</title>
-  <link rel="stylesheet" href="assets/styles.css"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link href="assets/styles.css" rel="stylesheet"/>
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <h3>About Us</h3>
-      <div class="team-grid mt-2">
-        <div class="member">
-          <img src="assets/faisal.JPG" alt="Mohamed Faisal Sindhi"/>
-          <div>
-            <h4>Mohamed Faisal Sindhi</h4>
-            <small>Frontend, deployment, chatbot</small>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+    <div class="container justify-content-between">
+      <a class="navbar-brand fw-bold badge rounded-pill bg-primary-subtle text-white-50 px-3 py-2" href="index.html">US States Dashboard</a>
+      <ul class="navbar-nav mx-auto gap-3">
+        <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
+        <li class="nav-item"><a class="nav-link" href="create.html">Create</a></li>
+        <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
+        <li class="nav-item"><a class="nav-link" href="delete.html">Delete</a></li>
+        <li class="nav-item"><a class="nav-link" href="data.html">Charts</a></li>
+        <li class="nav-item"><a class="nav-link active" aria-current="page" href="about.html"><u>About</u></a></li>
+      </ul>
+      <a class="btn btn-outline-info btn-sm" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
+    </div>
+  </nav>
+
+  <main class="container py-5">
+
+    <section class="card p-4 mb-4">
+      <h4 class="mb-3">About Us</h4>
+      <div class="row g-4">
+        <!-- Faisal -->
+        <div class="col-12 col-lg-4">
+          <div class="card h-100 p-3">
+            <div class="d-flex align-items-center gap-3">
+              <img src="assets/faisal.JPG" alt="Mohamed Faisal Sindhi" class="rounded" style="width:72px;height:72px;object-fit:cover"/>
+              <div>
+                <div class="fw-semibold">Mohamed Faisal Sindhi</div>
+                <small class="text-muted">Frontend, deployment, chatbot</small>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="member">
-          <img src="assets/hongxu.JPG" alt="Hongxu Yang"/>
-          <div>
-            <h4>Hongxu Yang</h4>
-            <small>UI/UX, ERD & documentation</small>
+        <!-- Hongxu -->
+        <div class="col-12 col-lg-4">
+          <div class="card h-100 p-3">
+            <div class="d-flex align-items-center gap-3">
+              <img src="assets/hongxu.JPG" alt="Hongxu Yang" class="rounded" style="width:72px;height:72px;object-fit:cover"/>
+              <div>
+                <div class="fw-semibold">Hongxu Yang</div>
+                <small class="text-muted">UI/UX, ERD & documentation</small>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="member">
-          <img src="assets/jonathan.jpg" alt="Jonathan James"/>
-          <div>
-            <h4>Jonathan James</h4>
-            <small>Controllers, charts, data service</small>
+        <!-- Jonathan -->
+        <div class="col-12 col-lg-4">
+          <div class="card h-100 p-3">
+            <div class="d-flex align-items-center gap-3">
+              <img src="assets/jonathan.jpg" alt="Jonathan James" class="rounded" style="width:72px;height:72px;object-fit:cover"/>
+              <div>
+                <div class="fw-semibold">Jonathan James</div>
+                <small class="text-muted">Controllers, charts, data service</small>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="actions mt-2">
-              <a class="btn" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub Repository</a>
-              <a class="btn ghost" href="README.md" target="_blank" rel="noopener">README (Technical Details)</a>
-            </div>
+    </section>
 
-    <div class="erd-wrap mt-3">
-      <h3 style="margin-top:0">Data Model (ERD)</h3>
-      <img src="assets/logical_data_model_v3.png" alt="ERD diagram"/>
-    </div>
+    <!-- Links & Docs separate section -->
+    <section class="card p-4 mb-4">
+      <h5 class="mb-3">Links &amp; Docs</h5>
+      <div class="d-flex flex-wrap gap-2">
+        <a class="btn btn-info" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub Repository</a>
+        <a class="btn btn-outline-light" href="README.md" target="_blank" rel="noopener">README (Technical Details)</a>
+      </div>
+    </section>
 
-    <div class="card mt-3">
-      <h3 style="margin-top:0">Overview of CRUD Implementation</h3>
-      <p>
-        The application follows a lightweight MVC structure. <strong>Model</strong> logic in
-        <code>assets/model.js</code> manages persistent state in <code>localStorage</code> (key <code>us_states_v1</code>),
-        exposing <code>getAll/create/update/remove</code> and aggregate <code>totals()</code>.
-        <strong>Controller</strong> code in <code>assets/controller.js</code> binds form events, renders tables,
-        updates views, and injects a shared navbar/footer for consistent layout.
-        <strong>Views</strong> are the HTML pages. Charts are rendered with Chart.js in <code>assets/charts.js</code>.
+    <!-- ERD -->
+    <section class="card p-4 mb-4">
+      <h5 class="mb-3">Data Model (ERD)</h5>
+      <img src="assets/logical_data_model_v3.png" alt="Project ERD" class="img-fluid rounded" style="max-width: 880px"/>
+    </section>
+
+    <!-- Writeups -->
+    <section class="card p-4">
+      <h5 class="mb-3">Engineering Notes</h5>
+
+      <h6 class="mt-2">Overview of CRUD Implementation</h6>
+      <p class="mb-2">
+        The application follows a simple MVC pattern in the browser. The model persists state data using
+        localStorage with a small data-access layer. Controller functions validate and transform input
+        before writing to storage. Views are organized as separate pages:
+        <em>Create</em> adds new states with client-side validation, <em>Data Table</em> lists all states with
+        inline action links, <em>Update</em> loads and edits a selected state, and <em>Delete</em> removes a selection.
+        The charts page reads from the same data source to keep visuals consistent.
       </p>
-      <p>
-        When a record is created/updated/deleted, the table, KPIs, and charts reflect the change immediately
-        because all pages read from the same persisted model. External Insights use the World Bank API for GDP
-        and population (read-only) with a local fallback if the request is blocked.
-      </p>
-    </div>
 
-    <div class="card mt-3">
-      <h3 style="margin-top:0">Notable Technical Challenges and Solutions</h3>
-      <ul>
-        <li><strong>Empty dataset during grading:</strong> Seeded a realistic initial dataset in <code>model.js</code> so the
-            dashboard is never blank and still behaves like a CRUD app through local persistence.</li>
-        <li><strong>Cross-origin blocks on APIs:</strong> Wrapped the World Bank calls with a try/catch and added a local
-            fallback snapshot to keep the homepage informative when network policies block requests.</li>
-        <li><strong>Design consistency:</strong> Centralized theme tokens and shared chrome injection to guarantee identical
-            navigation, typography, colors, and spacing across all pages.</li>
-        <li><strong>Large ERD image:</strong> Contained and scaled with a responsive wrapper to avoid layout overflow.</li>
+      <h6 class="mt-3">Notable Technical Challenges &amp; Solutions</h6>
+      <ul class="mb-0">
+        <li><strong>Empty dataset on first load.</strong> Charts and KPIs now handle an empty store by showing a clear notice
+            and using a small demo dataset until the user adds records.</li>
+        <li><strong>Number formatting and overflow.</strong> Long values are formatted with thousands separators and
+            abbreviated where needed to avoid overflow in KPI and chart labels.</li>
+        <li><strong>Case-sensitive assets on GitHub Pages.</strong> Image paths were corrected to match file casing exactly
+            (e.g., <code>hongxu.JPG</code> vs <code>hongxu.jpg</code>).</li>
+        <li><strong>Consistent theming.</strong> Reused a shared navbar and card layout so typography and colors read well across pages.</li>
       </ul>
+    </section>
+  </main>
+
+  <footer class="container py-4">
+    <div class="d-flex justify-content-between align-items-center small text-muted-2">
+      <span>© 2025 US States Dashboard</span>
+      <span>Built with ❤️ by Faisal, Hongxu & Jonathan</span>
     </div>
-  </div>
+  </footer>
 
-  <script type="module">
-    import { mountChrome } from './assets/controller.js';
-    mountChrome('about');
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Botpress -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
 </body>
