--- a/about.html
+++ b/about.html
@@ -1,126 +1,95 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>About — US States Dashboard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="assets/styles.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="assets/styles.css"/>
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-    <div class="container justify-content-between">
-      <a class="navbar-brand fw-bold badge rounded-pill bg-primary-subtle text-white-50 px-3 py-2" href="index.html">US States Dashboard</a>
-      <ul class="navbar-nav mx-auto gap-3">
-        <li class="nav-item"><a class="nav-link" href="read.html">Data Table</a></li>
-        <li class="nav-item"><a class="nav-link" href="create.html">Create</a></li>
-        <li class="nav-item"><a class="nav-link" href="update.html">Update</a></li>
-        <li class="nav-item"><a class="nav-link" href="delete.html">Delete</a></li>
-        <li class="nav-item"><a class="nav-link" href="data.html">Charts</a></li>
-        <li class="nav-item"><a class="nav-link active" aria-current="page" href="about.html"><u>About</u></a></li>
-      </ul>
-      <a class="btn btn-outline-info btn-sm" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a>
+  <div class="navbar">
+    <div class="nav-inner">
+      <a class="brand" href="index.html">US States Dashboard</a>
+      <div class="nav-center">
+        <a href="read.html">Data Table</a><a href="create.html">Create</a>
+        <a href="update.html">Update</a><a href="delete.html">Delete</a>
+        <a href="data.html">Charts</a><a href="about.html">About</a>
+      </div>
+      <div class="nav-right"><a href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub</a></div>
     </div>
-  </nav>
+  </div>
 
-  <main class="container py-5">
-
-    <section class="card p-4 mb-4">
-      <h4 class="mb-3">About Us</h4>
-      <div class="row g-4">
-        <!-- Faisal -->
-        <div class="col-12 col-lg-4">
-          <div class="card h-100 p-3">
-            <div class="d-flex align-items-center gap-3">
-              <img src="assets/faisal.JPG" alt="Mohamed Faisal Sindhi" class="rounded" style="width:72px;height:72px;object-fit:cover"/>
-              <div>
-                <div class="fw-semibold">Mohamed Faisal Sindhi</div>
-                <small class="text-muted">Frontend, deployment, chatbot</small>
-              </div>
-            </div>
+  <main class="container">
+    <section class="card soft">
+      <div class="h1">About Us</div>
+      <div class="team">
+        <div class="card member">
+          <img class="member-photo" src="assets/faisal.JPG" alt="Mohamed Faisal Sindhi"/>
+          <div>
+            <div class="h2">Mohamed Faisal Sindhi</div>
+            <div class="muted">Frontend, deployment, chatbot</div>
           </div>
         </div>
-        <!-- Hongxu -->
-        <div class="col-12 col-lg-4">
-          <div class="card h-100 p-3">
-            <div class="d-flex align-items-center gap-3">
-              <img src="assets/hongxu.JPG" alt="Hongxu Yang" class="rounded" style="width:72px;height:72px;object-fit:cover"/>
-              <div>
-                <div class="fw-semibold">Hongxu Yang</div>
-                <small class="text-muted">UI/UX, ERD & documentation</small>
-              </div>
-            </div>
+        <div class="card member">
+          <img class="member-photo" src="assets/hongxu.JPG" alt="Hongxu Yang"/>
+          <div>
+            <div class="h2">Hongxu Yang</div>
+            <div class="muted">UI/UX, ERD & documentation</div>
           </div>
         </div>
-        <!-- Jonathan -->
-        <div class="col-12 col-lg-4">
-          <div class="card h-100 p-3">
-            <div class="d-flex align-items-center gap-3">
-              <img src="assets/jonathan.jpg" alt="Jonathan James" class="rounded" style="width:72px;height:72px;object-fit:cover"/>
-              <div>
-                <div class="fw-semibold">Jonathan James</div>
-                <small class="text-muted">Controllers, charts, data service</small>
-              </div>
-            </div>
+        <div class="card member">
+          <img class="member-photo" src="assets/jonathan.jpg" alt="Jonathan James"/>
+          <div>
+            <div class="h2">Jonathan James</div>
+            <div class="muted">Controllers, charts, data service</div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- Links & Docs separate section -->
-    <section class="card p-4 mb-4">
-      <h5 class="mb-3">Links &amp; Docs</h5>
-      <div class="d-flex flex-wrap gap-2">
-        <a class="btn btn-info" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub Repository</a>
-        <a class="btn btn-outline-light" href="README.md" target="_blank" rel="noopener">README (Technical Details)</a>
+    <section class="card" style="margin-top:18px">
+      <div class="h2">Links & Docs</div>
+      <div class="links-grid">
+        <a class="btn" href="https://github.com/mdfaisals2025/us-states-dashboard" target="_blank" rel="noopener">GitHub Repository</a>
+        <a class="btn secondary" href="README.md" target="_blank" rel="noopener">README (Technical Details)</a>
       </div>
     </section>
 
-    <!-- ERD -->
-    <section class="card p-4 mb-4">
-      <h5 class="mb-3">Data Model (ERD)</h5>
-      <img src="assets/logical_data_model_v3.png" alt="Project ERD" class="img-fluid rounded" style="max-width: 880px"/>
+    <section class="card" style="margin-top:18px">
+      <div class="h2">Data Model (ERD)</div>
+      <img class="erd" src="assets/logical_data_model_v3.png" alt="ERD"/>
     </section>
 
-    <!-- Writeups -->
-    <section class="card p-4">
-      <h5 class="mb-3">Engineering Notes</h5>
+    <section class="card" style="margin-top:18px">
+      <div class="h2">Overview of CRUD Implementation</div>
+      <ul>
+        <li><strong>Model:</strong> LocalStorage wrapper (<code>assets/model.js</code>) with seed data and helpers for <em>add, update, remove, list</em>.</li>
+        <li><strong>View:</strong> Plain HTML templates styled with <code>assets/styles.css</code>. Reusable cards/tables.</li>
+        <li><strong>Controller:</strong> <code>assets/controller.js</code> wires forms, table actions, totals, and page routing.</li>
+        <li><strong>Charts:</strong> <code>assets/charts.js</code> renders donut/bar/line using Chart.js from the current dataset.</li>
+        <li><strong>API:</strong> <code>assets/api.js</code> fetches World Bank GDP & Population for the Home page.</li>
+      </ul>
+    </section>
 
-      <h6 class="mt-2">Overview of CRUD Implementation</h6>
-      <p class="mb-2">
-        The application follows a simple MVC pattern in the browser. The model persists state data using
-        localStorage with a small data-access layer. Controller functions validate and transform input
-        before writing to storage. Views are organized as separate pages:
-        <em>Create</em> adds new states with client-side validation, <em>Data Table</em> lists all states with
-        inline action links, <em>Update</em> loads and edits a selected state, and <em>Delete</em> removes a selection.
-        The charts page reads from the same data source to keep visuals consistent.
-      </p>
-
-      <h6 class="mt-3">Notable Technical Challenges &amp; Solutions</h6>
-      <ul class="mb-0">
-        <li><strong>Empty dataset on first load.</strong> Charts and KPIs now handle an empty store by showing a clear notice
-            and using a small demo dataset until the user adds records.</li>
-        <li><strong>Number formatting and overflow.</strong> Long values are formatted with thousands separators and
-            abbreviated where needed to avoid overflow in KPI and chart labels.</li>
-        <li><strong>Case-sensitive assets on GitHub Pages.</strong> Image paths were corrected to match file casing exactly
-            (e.g., <code>hongxu.JPG</code> vs <code>hongxu.jpg</code>).</li>
-        <li><strong>Consistent theming.</strong> Reused a shared navbar and card layout so typography and colors read well across pages.</li>
+    <section class="card" style="margin-top:18px">
+      <div class="h2">Notable Technical Challenges & Solutions</div>
+      <ul>
+        <li><strong>Inconsistent layout & unreadable text:</strong> Unified a dark theme with higher contrast and consistent spacing.</li>
+        <li><strong>Charts not loading:</strong> Ensured Chart.js is loaded on <code>data.html</code> and corrected canvas IDs & dataset guards.</li>
+        <li><strong>Empty dataset issues:</strong> Added safe seeding and empty-state handling so pages don’t break.</li>
+        <li><strong>Image loading on GitHub Pages:</strong> Fixed <em>case-sensitive</em> filenames (<code>faisal.JPG</code>, <code>hongxu.JPG</code>, <code>jonathan.jpg</code>) and constrained sizes via CSS.</li>
+        <li><strong>Duplicate bot widget:</strong> Kept a single Botpress embed on every page.</li>
       </ul>
     </section>
   </main>
 
-  <footer class="container py-4">
-    <div class="d-flex justify-content-between align-items-center small text-muted-2">
-      <span>© 2025 US States Dashboard</span>
-      <span>Built with ❤️ by Faisal, Hongxu & Jonathan</span>
-    </div>
-  </footer>
+  <div class="footer">
+    <span>© 2025 US States Dashboard</span>
+    <span>Built with <span class="heart">❤️</span> by Faisal, Hongxu & Jonathan</span>
+  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Botpress -->
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
+  <script type="module" src="assets/controller.js"></script>
 </body>
 </html>
