--- a/update.html
+++ b/update.html
@@ -1,68 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Update — US States Dashboard</title>
   <link rel="stylesheet" href="assets/styles.css"/>
 </head>
 <body>
-  <div class="container">
-    <div class="card">
-      <h3 style="margin:0 0 12px">Choose a state to edit</h3>
-      <div class="actions">
-        <select id="sel" class="input" style="max-width:360px"></select>
-        <button id="load" class="btn">Load</button>
+  <div class="navbar">
+    <div class="nav-inner">
+      <a class="brand" href="index.html">US States Dashboard</a>
+      <div class="nav-center">
+        <a href="read.html">Data Table</a><a href="create.html">Create</a>
+        <a href="update.html">Update</a><a href="delete.html">Delete</a>
+        <a href="data.html">Charts</a><a href="about.html">About</a>
       </div>
-      <form class="form-grid mt-3">
-        <div>
-          <label>State ID (2-letter Code)</label>
-          <input id="f-id" class="input" required maxlength="2"/>
-        </div>
-        <div>
-          <label>State Name</label>
-          <input id="f-name" class="input" required/>
-        </div>
-        <div>
-          <label>Region</label>
-          <select id="f-region" class="input" required>
-            <option>West</option><option>South</option><option>Midwest</option><option>Northeast</option>
-          </select>
-        </div>
-        <div>
-          <label>Capital</label>
-          <input id="f-capital" class="input" required/>
-        </div>
-        <div>
-          <label>Number of Cities</label>
-          <input id="f-cities" class="input" type="number" min="0" step="1" required/>
-        </div>
-        <div>
-          <label>Population</label>
-          <input id="f-pop" class="input" type="number" min="0" step="1" required/>
-        </div>
-        <div>
-          <label>GDP (USD)</label>
-          <input id="f-gdp" class="input" type="number" min="0" step="1" required/>
-        </div>
-        <div>
-          <label>Land Area (km²)</label>
-          <input id="f-area" class="input" type="number" min="0" step="1" required/>
-        </div>
-        <div class="full actions mt-2">
-          <button class="btn" type="submit">Save Changes</button>
-          <a class="btn ghost" href="read.html">Cancel</a>
-        </div>
-      </form>
+      <div class="nav-right"><a class="btn ghost" href="read.html">Back to Table</a></div>
     </div>
   </div>
 
-  <script type="module">
-    import { mountChrome, initUpdate } from './assets/controller.js';
-    mountChrome('update'); initUpdate();
-  </script>
+  <main class="container">
+    <div class="card">
+      <div class="h1">Choose a state to edit</div>
+      <div style="display:flex; gap:10px; margin-bottom:14px">
+        <select id="select-state"></select>
+        <button id="btn-load" class="btn secondary">Load</button>
+      </div>
+
+      <form id="update-form">
+        <div class="form-row-3">
+          <div><label>State ID (2-letter Code)</label><input name="id" required/></div>
+          <div><label>State Name</label><input name="name" required/></div>
+          <div><label>Region</label>
+            <select name="region" required>
+              <option>West</option><option>South</option><option>Midwest</option><option>Northeast</option>
+            </select>
+          </div>
+        </div>
+        <div class="form-row-3" style="margin-top:6px">
+          <div><label>Capital</label><input name="capital" required/></div>
+          <div><label>Number of Cities</label><input name="cities" type="number" min="0"/></div>
+          <div><label>Population</label><input name="population" type="number" min="0"/></div>
+        </div>
+        <div class="form-row-3" style="margin-top:6px">
+          <div><label>GDP (USD)</label><input name="gdp" type="number" min="0"/></div>
+          <div><label>Land Area (km²)</label><input name="area" type="number" min="0"/></div>
+          <div style="display:flex;align-items:flex-end;gap:10px">
+            <button class="btn" type="submit">Save Changes</button>
+            <a class="btn secondary" href="read.html">Cancel</a>
+          </div>
+        </div>
+      </form>
+    </div>
+  </main>
+
+  <div class="footer">
+    <span>© 2025 US States Dashboard</span>
+    <span>Built with <span class="heart">❤️</span> by Faisal, Hongxu & Jonathan</span>
+  </div>
 
   <script src="https://cdn.botpress.cloud/webchat/v3.3/inject.js" defer></script>
   <script src="https://files.bpcontent.cloud/2025/10/15/14/20251015145259-9P277TWT.js" defer></script>
+  <script type="module" src="assets/controller.js"></script>
 </body>
 </html>
